# VoxLibRus

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_REPORT.md  CODE_AUDIT.md  CONTRIBUTING.md  GPU_COMPAT.md  LICENSE  QUALITY.md  README.md  STATUS.md  VoxLibRus-architecture-review2.md  audition_guide.md  config.yaml  pyproject.toml  ref_text.txt  reference_problem.md  reference_text.txt  requirements.txt  ruaccent_bug.md  sherlock_holmes.epub  test_book.epub  test_chunks.json
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_7e52dfb0-7137-40e5-9ea3-d88438dcf6bb.md
tests/: fixtures.py  test_accents.py  test_chunker.py  test_cleaner.py  test_config.py  test_extractor.py  test_integration.py  test_pipeline_stage6.py  test_voice_cloner.py
tests/fixtures/: epub_spine_test.epub  sample.epub  test_book.epub
voxlib/: __init__.py  config.py  pipeline.py
voxlib/asr/: __init__.py  base.py  gigaam.py  whisper.py
voxlib/audio/: assemble.py  normalize.py  preprocess.py  qa.py
voxlib/cli/: main.py
voxlib/text/: accents.py  chunker.py  cleaner.py  extractor.py
voxlib/tts/: base.py  f5tts.py  qwen3.py
voxlib/utils/: hf_auth.py  setup.py  torchaudio_shim.py
voxlib/voice/: cloner.py  manager.py
