[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxlib"
version = "0.1.0"
description = "Russian audiobook generation with voice cloning"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "pdfplumber>=0.10.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "num2words>=0.5.12",
]

[project.optional-dependencies]
all = [
    "voxlib[qwen3,f5tts,audio,dev]",
]
qwen3 = [
    # Qwen3-TTS через transformers
]
f5tts = [
    "f5-tts>=1.0.0",
]
audio = [
    "librosa>=0.10.0",
    "noisereduce>=3.0.0",
    "pyloudnorm>=0.1.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
voxlib = "voxlib.cli.main:app"

[tool.setuptools.packages.find]
include = ["voxlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
